--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
+    paths-ignore:
+      - '.github/workflows/go.yml'
     branches: [ "main" ]
 
 jobs:
 
-  build:
+  build_and_test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -16,10 +18,13 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: ^1.17
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: go test -race -cover ./... -covermode=atomic -coverprofile coverage.out
+
+    - name: Upload coverage file
+      uses: codecov/codecov-action@v3
