--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
 
-  build_and_test:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -18,13 +18,37 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: ^1.17
+        go-version: ^1.18
+
+    - name: Check out code
+      uses: actions/checkout@v3
+
+    - name: Get dependencies
+      run: go get -v -t -d ./...
 
     - name: Build
       run: go build -v ./...
 
+  test:
+    name: Test
+    runs-on: ${{ .matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        go: [ '1.18', '1.19', '1.20', "1.21" ]
+
+    steps:
+    - name: Set up Go
+      uses: actions/setup-go@v3
+      with:
+        go-version: ${{ matrix.go }}
+
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Test
-      run: go test -race -cover ./... -covermode=atomic -coverprofile coverage.out
+      run: go test -race -cover -covermode=atomic -coverprofile coverage.out -v ./...
 
     - name: Upload coverage file
       uses: codecov/codecov-action@v3
