--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,10 +11,9 @@ on:
 jobs:
 
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
@@ -31,9 +30,9 @@ jobs:
 
   test:
     name: Test
-    runs-on: ${{ .matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         go: [ '1.18', '1.19', '1.20', "1.21" ]
